--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "husky": "^8.0.3",
     "typescript": "^4.9.4"
   }
 }
