--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "jest"
   },
   "dependencies": {
+    "18": "^0.0.0",
     "gatsby": "^5.5.0",
     "gatsby-plugin-google-gtag": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
@@ -29,13 +31,20 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "babel-jest": "^29.4.2",
+    "babel-preset-gatsby": "^3.6.0",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -43,10 +52,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-prefer-function-component": "^3.1.0",
+    "gatsby-plugin-eslint": "^4.0.3",
     "husky": "^8.0.3",
     "i": "^0.3.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "npm": "^9.4.1",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
+  },
+  "jest": {
+    "verbose": true
   }
 }
