--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,11 +17,19 @@
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./Prescom/tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest", // Allows for the parsing of modern ECMAScript features
+    "sourceType": "module" // Allows for the use of imports
   },
-  "ignorePatterns": ["public/*", "commitlint.config.js", "gatsby-config.ts"],
+  "ignorePatterns": [
+    "babel.config.js",
+    "public/*",
+    "commitlint.config.js",
+    "gatsby-config.ts"
+  ],
   "plugins": [
     "react",
     "@typescript-eslint",
@@ -29,6 +37,7 @@
     "prettier"
   ],
   "rules": {
+    "no-console": "off",
     "semi": ["error", "never"],
     "@typescript-eslint/semi": ["error", "never"],
     "react/function-component-definition": [
