--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "18": "^0.0.0",
     "gatsby": "^5.5.0",
-    "gatsby-plugin-google-gtag": "^5.5.0",
+    "gatsby-plugin-google-gtag": "^5.6.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-source-contentful": "^8.5.0",
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-prefer-function-component": "^3.1.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "gatsby-plugin-eslint": "^4.0.3",
     "husky": "^8.0.3",
     "i": "^0.3.7",
