--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "gatsby": "^5.5.0",
@@ -43,10 +44,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-prefer-function-component": "^3.1.0",
-    "husky": "^8.0.3",
-    "i": "^0.3.7",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.1",
     "npm": "^9.4.1",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4"
+  },
+  "lint-staged": {
+    "./src/**/*.{js,ts,tsx}": "prettier --write",
+    "*.{js,ts,tsx}": "eslint"
   }
 }
