--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.json",
+        "parser": "@typescript-eslint/parser"
     },
     "ignorePatterns": [
         "public/*", 
@@ -28,7 +29,8 @@
         "gatsby-config.ts",
         "jest*",
         "__mocks__/*",
-        "loadershim.js"
+        "loadershim.js",
+        "setup-test-env.js"
     ],
     "plugins": [
         "react",
