--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.20.13",
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "babel-jest": "^29.4.2",
@@ -52,9 +56,11 @@
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "lint-staged": "^13.1.1",
     "npm": "^9.4.1",
     "prettier": "^2.8.3",
+    "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   },
