--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
+    "clsx": "^2.0.0",
     "feather-icons": "^4.29.0",
     "gatsby": "^5.5.0",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-google-gtag": "^5.6.0",
     "gatsby-plugin-image": "^3.5.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sass": "^6.12.0",
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-source-contentful": "^8.5.0",
     "gatsby-source-filesystem": "^5.5.0",
@@ -36,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "sass": "^1.68.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
