--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-google-gtag": "^5.6.0",
     "gatsby-plugin-image": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sass": "^6.12.0",
     "gatsby-plugin-sharp": "^5.5.0",
