--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "clsx": "^2.0.0",
     "feather-icons": "^4.29.0",
+    "firebase": "^10.5.2",
     "gatsby": "^5.5.0",
     "gatsby-omni-font-loader": "^2.0.2",
-    "gatsby-plugin-google-gtag": "^5.6.0",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-layout": "^4.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
