--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 🏗 Setup Repo
         uses: actions/checkout@v3
       - name: 🏗 Setup Node
-        use: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: 📦 Install Dependencies
@@ -25,19 +25,18 @@ jobs:
         run: npm run test
 
   build_and_deploy:
-    need: test
+    needs: test
     name: Deploy on Firebase
     runs-on: macos-latest
     environment: production
+    env:
+      CONTENTFUL_ACCESS_TOKEN: '${{ secrets.CONTENTFUL_ACCESS_TOKEN }}'
+      CONTENTFUL_SPACE_ID: '${{ secrets.CONTENTFUL_SPACE_ID }}'
     steps:
       - name: 🏗 Setup Repo
         uses: actions/checkout@v3
       - name: 🏗 Setup Node
-        use: actions/setup-node@v3
-      - name: 🗃 Set Env Variables
-        env:
-          CONTENTFUL_ACCESS_TOKEN: '${{ secrets.CONTENTFUL_ACCESS_TOKEN }}'
-          CONTENTFUL_SPACE_ID: '${{ secrets.CONTENTFUL_SPACE_ID }}'
+        uses: actions/setup-node@v3
       - name: 📦 Install Dependencies and Build
         run: npm ci && npm run build
       - name: 🚀 Deploy
