--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -1,34 +1,17 @@
 # https://github.com/firebase/firebase-tools
 
-name: Deploy to Firebase Hosting on merge
+name: Deploy For Testing Purposes
 on:
   workflow_dispatch:
   push:
-    types:
-      - closed
     branches:
-      - release/*
+      - dev
 jobs:
-  test:
-    name: Test Web App
-    runs-on: macos-latest
-    steps:
-      - name: 🏗 Setup Repo
-        uses: actions/checkout@v3
-      - name: 🏗 Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: 📦 Install Dependencies
-        run: npm ci
-      - name: 🧪 Test app
-        run: npm run test
-
   build_and_deploy:
     needs: test
     name: Deploy on Firebase
     runs-on: macos-latest
-    environment: production
+    environment: test
     env:
       CONTENTFUL_ACCESS_TOKEN: '${{ secrets.CONTENTFUL_ACCESS_TOKEN }}'
       CONTENTFUL_SPACE_ID: '${{ secrets.CONTENTFUL_SPACE_ID }}'
@@ -43,6 +26,7 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRESCOM_CORPORATION_GROUP }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRESCOM_CORPORATION_GROUP_TEST }}'
           channelId: live
           projectId: '${{ secrets.FIREBASE_PROJECT_ID }}'
+          target: '${{ secrets.FIREBASE_TARGET }}'
