--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -4,7 +4,7 @@ name: Deploy to Production
 on:
   workflow_dispatch:
   push:
-    tag:
+    tags:
       - 'v[0-9].[0-9].[0-9]'
     branches:
       - release
