--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,17 @@
 {
+  "projects": {
+    "default": "prescom-corporation-group"
+  },
+  "targets": {
+    "prescom-corporation-group": {
+      "hosting": {
+        "test-website": [
+          "prescom-corporation-group-test-a"
+        ]
+      }
+    }
+  },
+  "etags": {},
   "hosting": {
     "public": "public",
     "ignore": [
