--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,7 @@
 {
-  "projects": {
-    "default": "prescom-corporation-group"
-  },
-  "targets": {
-    "prescom-corporation-group": {
-      "hosting": {
-        "test-website": [
-          "prescom-corporation-group-test-a"
-        ]
-      }
-    }
-  },
-  "etags": {},
   "hosting": {
     "public": "public",
+    "site": "prescom-corporation-group-test-a",
     "ignore": [
       "firebase.json",
       "**/.*",
