--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,7 @@
   "etags": {},
   "hosting": {
     "public": "public",
+    "site": "prescom-corporation-group-test-a",
     "ignore": [
       "firebase.json",
       "**/.*",
