--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
     "clsx": "^2.0.0",
+    "dompurify": "^3.0.6",
     "feather-icons": "^4.29.0",
     "firebase": "^10.5.2",
     "gatsby": "^5.5.0",
@@ -39,9 +40,11 @@
     "gatsby-source-contentful": "^8.5.0",
     "gatsby-source-filesystem": "^5.5.0",
     "gatsby-transformer-sharp": "^5.5.0",
+    "marked": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "remove-markdown": "^0.5.0",
     "sass": "^1.68.0",
     "styled-components": "^5.3.6"
   },
